# bayes_yplus

./: .gitattributes  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
bayes_yplus/: __init__.py  _version.py  yplus_model.py
docs/: requirements.txt
docs/source/: bayes_yplus.rst  conf.py  index.rst  modules.rst
docs/source/notebooks/: optimization.ipynb  tutorial.ipynb
examples/: optimization.ipynb  tutorial.ipynb
examples/figures/: model.gv
tests/: test_yplus_model.py
